--- a/MaterializeExcel.View/MainControl.xaml
+++ b/MaterializeExcel.View/MainControl.xaml
@@ -1,17 +1,22 @@
-﻿<UserControl x:Class="MaterializeExcel.View.MainControl"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:viewModels="clr-namespace:MaterializeExcelViewModel;assembly=MaterializeExcelViewModel"
-             mc:Ignorable="d"
-             d:DataContext="{d:DesignInstance viewModels:MainControlViewModel, IsDesignTimeCreatable=False}"
-             FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto"
+﻿<reactiveUi:ReactiveUserControl x:Class="MaterializeExcel.View.MainControl"
+                                x:TypeArguments="viewModels:MainControlViewModel"
+                                xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                                xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                                xmlns:viewModels="clr-namespace:MaterializeExcelViewModel;assembly=MaterializeExcelViewModel"
+                                xmlns:reactiveUi="http://reactiveui.net"
+                                xmlns:view="clr-namespace:MaterializeExcel.View"
+                                xmlns:nodes="clr-namespace:MaterializeExcelViewModel.Nodes;assembly=MaterializeExcelViewModel"
+                                mc:Ignorable="d"
+                                d:DataContext="{d:DesignInstance viewModels:MainControlViewModel, IsDesignTimeCreatable=False}"
+                                FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto"
 
-             TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-             Background="{DynamicResource MaterialDesignPaper}"
-             Height="350" Width="525">
-    <!-- ContentRendered="UserControl_ContentRendered" -->
+                                TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+                                Background="{DynamicResource MaterialDesignPaper}"
+                                HorizontalAlignment="Stretch"
+                                VerticalAlignment="Stretch">
+
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -34,94 +39,38 @@
         </ResourceDictionary>
     </UserControl.Resources>
 
-    <Grid x:Name="MainGrid">
-        <StackPanel>
-            <Label>Stuff</Label>
-            <TreeView
-                ItemsSource="{Binding CatalogNodeViewModels}"
-                DataContext="{Binding Catalog }">
-                <TreeView.Resources>
+    <StackPanel>
+        <Label>Stuff</Label>
+        
+        <!-- ItemsSource="{Binding CatalogNodeViewModels}" -->
+        <!-- DataContext="{Binding Catalog }">         -->
+        <TreeView x:Name="CatalogTree">
 
-                    <Style TargetType="{x:Type TreeViewItem}" BasedOn="{StaticResource MahApps.Styles.TreeViewItem}">
-                        <!-- <Style TargetType="{x:Type TreeViewItem}" BasedOn="{StaticResource MetroTreeViewItem}"> -->
-                        <Setter Property="IsExpanded"
-                                Value="{Binding IsExpanded,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" />
-                        <Setter Property="IsSelected"
-                                Value="{Binding IsSelected,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" />
-                    </Style>
+            <TreeView.Resources>
 
-                    <HierarchicalDataTemplate DataType="{x:Type viewModels:CatalogNodeViewModel}"
-                                              ItemsSource="{Binding Children}">
+                <Style TargetType="{x:Type TreeViewItem}" BasedOn="{StaticResource MahApps.Styles.TreeViewItem}">
+                    <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}" />
+                    <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}" />
+                </Style>
 
-                        <Grid Margin="4">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto" />
-                                <ColumnDefinition Width="*" />
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto" />
-                                <!-- <RowDefinition Height="Auto" /> -->
-                            </Grid.RowDefinitions>
+                <!-- <Style TargetType="{x:Type TreeViewItem}" BasedOn="{StaticResource MahApps.Styles.TreeViewItem}"> -->
+                <!--     ~1~ <Style TargetType="{x:Type TreeViewItem}" BasedOn="{StaticResource MetroTreeViewItem}"> @1@ -->
+                <!--     <Setter Property="IsExpanded" -->
+                <!--             Value="{Binding IsExpanded,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" /> -->
+                <!--     <Setter Property="IsSelected" -->
+                <!--             Value="{Binding IsSelected,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" /> -->
+                <!-- </Style> -->
 
-                            <TextBlock
-                                Grid.Row="0"
-                                FontSize="14"
-                                Text="{Binding Name}" />
+                <HierarchicalDataTemplate DataType="{x:Type nodes:NodeViewModel}"
+                                          ItemsSource="{Binding Children}">
+                    <!-- <view:CatalogNodeView /> -->
+                    <reactiveUi:ViewModelViewHost ViewModel="{Binding ViewModel}" />
 
-                            <!-- <TextBlock -->
-                            <!--     Grid.Row="1" Grid.Column="0" -->
-                            <!--     FontWeight="Light" -->
-                            <!--     Text="{Binding EmployeeCountText}" /> -->
+                </HierarchicalDataTemplate>
+            </TreeView.Resources>
 
-                            <StackPanel Grid.Row="0" Grid.Column="1"
-                                        Margin="4 2 2 4"
-                                        VerticalAlignment="Center"
-                                        Orientation="Horizontal">
-
-                                <StackPanel.Resources>
-                                    <Style TargetType="{x:Type Button}"
-                                           BasedOn="{StaticResource MaterialDesignFlatButton}">
-                                        <Setter Property="Margin" Value="2 0 0 0" />
-                                        <Setter Property="Padding" Value="1" />
-                                        <Setter Property="HorizontalAlignment" Value="Right" />
-                                    </Style>
-                                </StackPanel.Resources>
-
-                                <Button
-                                    Visibility="{Binding  IsSelected, 
-                                Converter={StaticResource BooleanToVisibilityConverter}}"
-                                    ToolTip="Add to sheet"
-
-                                    Command="{Binding AddToSheetCommand}">
-
-                                    <Canvas Width="24" Height="24">
-                                        <Path
-                                            Data="M14,20H10V11L6.5,14.5L4.08,12.08L12,4.16L19.92,12.08L17.5,14.5L14,11V20Z"
-                                            Fill="{DynamicResource AccentSelectedColorBrush}" />
-                                    </Canvas>
-                                </Button>
-
-                                <!-- <Button -->
-                                <!--     Visibility="{Binding  IsSelected, Converter={StaticResource BooleanToVisibilityConverter}}" -->
-                                <!--     ToolTip="Sack" -->
-                                <!--     Command="{Binding SackCommand}"> -->
-                                <!-- -->
-                                <!--     <Viewbox Width="24" Height="24" Margin="2 0 0 0"> -->
-                                <!--         <Canvas Width="24" Height="24"> -->
-                                <!--             <Path -->
-                                <!--                 Fill="{DynamicResource AccentSelectedColorBrush}" -->
-                                <!--                 Data="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z" /> -->
-                                <!--         </Canvas> -->
-                                <!--     </Viewbox> -->
-                                <!-- </Button> -->
-                            </StackPanel>
-                        </Grid>
-                    </HierarchicalDataTemplate>
-                </TreeView.Resources>
-
-            </TreeView>
-        </StackPanel>
-    </Grid>
+        </TreeView>
+    </StackPanel>
 
 
-</UserControl>
+</reactiveUi:ReactiveUserControl>
