--- a/MaterializeExcel.View/Nodes/DatabaseNodeView.xaml
+++ b/MaterializeExcel.View/Nodes/DatabaseNodeView.xaml
@@ -3,7 +3,9 @@
                                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                                 xmlns:nodes="clr-namespace:MaterializeExcelViewModel.Nodes;assembly=MaterializeExcelViewModel"
-                                xmlns:reactiveUi="http://reactiveui.net">
+                                xmlns:reactiveUi="http://reactiveui.net"
+                                xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks">
+
     <Grid Margin="4">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
@@ -13,11 +15,15 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <Label>Database</Label>
-        <TextBlock
-            Grid.Column="1"
+        <iconPacks:PackIconMaterial
+            Kind="Database"
+            Width="12"
+            Height="12"
+            VerticalAlignment="Center"
+            Margin="0, 0, 5, 0" Foreground="Indigo"/>
+        
+        <Label Grid.Column="1"
             Grid.Row="0"
-            x:Name="ObjectName" />
-
+            x:Name="ObjectName"/>
     </Grid>
 </reactiveUi:ReactiveUserControl>
