--- a/MaterializeExcel.View/Nodes/TableNodeView.xaml
+++ b/MaterializeExcel.View/Nodes/TableNodeView.xaml
@@ -1,5 +1,5 @@
-﻿<reactiveUi:ReactiveUserControl x:Class="MaterializeExcel.View.Nodes.ColumnNodeView"
-                                x:TypeArguments="nodes:ColumnNodeViewModel"
+﻿<reactiveUi:ReactiveUserControl x:Class="MaterializeExcel.View.Nodes.ObjectNodeView"
+                                x:TypeArguments="nodes:TableNodeViewModel"
                                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                                 xmlns:nodes="clr-namespace:MaterializeExcelViewModel.Nodes;assembly=MaterializeExcelViewModel"
@@ -16,14 +16,19 @@
         </Grid.RowDefinitions>
 
         <iconPacks:PackIconMaterial
-            Kind="FormatColumns"
+            Kind="TableLarge"
             Width="12"
             Height="12"
             VerticalAlignment="Center"
-            Margin="0, 0, 5, 0" />
+            Margin="0, 0, 5, 0" Foreground="Chocolate"/>
 
-        <Label Grid.Column="1" x:Name="ObjectName" />
-        <Label Grid.Column="2" x:Name="Type" Opacity="0.3"/>
+        <Label Grid.Column="1"
+               Grid.Row="0"
+               VerticalAlignment="Center"
+               x:Name="ObjectName" />
+        <Button Grid.Column="2" ToolTip="Add to new sheet" Foreground="DarkGreen">
+            <iconPacks:PackIconMaterial Kind="MicrosoftExcel" />
+        </Button>
 
     </Grid>
 </reactiveUi:ReactiveUserControl>
