rename view models project

--- a/MaterializeExcel.View/MainControl.xaml
+++ b/MaterializeExcel.View/MainControl.xaml
@@ -1,15 +1,14 @@
 ﻿<reactiveUi:ReactiveUserControl x:Class="MaterializeExcel.View.MainControl"
-                                x:TypeArguments="viewModels:MainControlViewModel"
+                                x:TypeArguments="viewModel:MainControlViewModel"
                                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                                xmlns:viewModels="clr-namespace:MaterializeExcelViewModel;assembly=MaterializeExcelViewModel"
                                 xmlns:reactiveUi="http://reactiveui.net"
-                                xmlns:view="clr-namespace:MaterializeExcel.View"
-                                xmlns:nodes="clr-namespace:MaterializeExcelViewModel.Nodes;assembly=MaterializeExcelViewModel"
+                                xmlns:nodes="clr-namespace:MaterializeExcel.ViewModel.Nodes;assembly=MaterializeExcel.ViewModel"
+                                xmlns:viewModel="clr-namespace:MaterializeExcel.ViewModel;assembly=MaterializeExcel.ViewModel"
                                 mc:Ignorable="d"
-                                d:DataContext="{d:DesignInstance viewModels:MainControlViewModel, IsDesignTimeCreatable=False}"
+                                d:DataContext="{d:DesignInstance viewModel:MainControlViewModel, IsDesignTimeCreatable=False}"
                                 FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto"
 
                                 TextElement.Foreground="{DynamicResource MaterialDesignBody}"
